--- a/Store/Store.csproj
+++ b/Store/Store.csproj
@@ -66,6 +66,14 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Store.json.cs">
+      <DependentUpon>Store.json</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <TypedJSON Include="Store.json">
+      <Generator>MsBuild:Compile</Generator>
+    </TypedJSON>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(StarcounterBin)\Starcounter.MsBuild.targets" />
