--- a/Launcher.csproj
+++ b/Launcher.csproj
@@ -95,6 +95,9 @@
   <ItemGroup>
     <Content Include="Client\css\style.css" />
     <Content Include="Client\enecto_plus_skype.html" />
+    <Content Include="Client\vendor\tomalec-sortable-list\elements\tomalec-sortable-body.html" />
+    <Content Include="Client\vendor\tomalec-sortable-list\elements\tomalec-sortable-list.css" />
+    <Content Include="Client\vendor\tomalec-sortable-list\elements\tomalec-sortable-list.html" />
     <Content Include="Client\vendor\x-html\x-html.html" />
     <Content Include="Client\vendor\fast-json-patch\src\json-patch-duplex.js" />
     <Content Include="Client\vendor\PuppetJs\src\puppet.js" />
