Bower updatePolymer/platform#6460c3d5, Polymer/polymer#9c8a64bf, x-html#0.0.20140210

--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,8 @@
     "tests"
   ],
   "dependencies": {
-    "platform": "Polymer/platform",
-    "polymer": "Polymer/polymer",
+    "platform": "Polymer/platform#6460c3d51b30b50d311eb1d7b055f29affa26f74",
+    "polymer": "Polymer/polymer#9c8a64bf03d2543c6d9d73c3c5eea8e18c2e79e2",
     "fast-json-patch": "~0.3.6",
     "tomalec-sortable-list": "tomalec/sortable-flexbox-list",
     "x-html": "~0.0.20140122",
