--- a/Store/Server/StoreApp.json
+++ b/Store/Server/StoreApp.json
@@ -1,10 +1,12 @@
 {
     Apps: [{
 	   Appname: "",
+	   Description: "",
+	   Html: "",
 	   Rating: 15,
 	   Thumbnail: {},
        Buy$: null
 	}],
-
+	Html: "",
     StoreName: ""
 }
