--- a/Apps/dummyCRM/dummyCRM.csproj
+++ b/Apps/dummyCRM/dummyCRM.csproj
@@ -92,16 +92,18 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Server\ContactPage.json.cs">
+      <DependentUpon>ContactPage.json</DependentUpon>
+    </Compile>
     <Compile Include="Server\Master.json.cs">
       <DependentUpon>Master.json</DependentUpon>
     </Compile>
-    <Compile Include="Database\Demodata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server\CompanyPage.json.cs">
+      <DependentUpon>CompanyPage.json</DependentUpon>
+    </Compile>
     <Compile Include="Server\Page.json.cs">
       <DependentUpon>Page.json</DependentUpon>
-    </Compile>
-    <Compile Include="Server\PrimaryPage.json.cs">
-      <DependentUpon>PrimaryPage.json</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -110,8 +112,8 @@
     </TypedJSON>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Client\css\style.css" />
-    <Content Include="Client\person.html" />
+    <Content Include="Client\company.html" />
+    <Content Include="Client\contact.html" />
     <Content Include="Client\vendor\x-html\x-html.html" />
     <Content Include="Client\vendor\fast-json-patch\src\json-patch-duplex.js" />
     <Content Include="Client\vendor\platform\platform.js" />
@@ -123,9 +125,17 @@
     </TypedJSON>
   </ItemGroup>
   <ItemGroup>
-    <TypedJSON Include="Server\PrimaryPage.json">
+    <TypedJSON Include="Server\CompanyPage.json">
       <Generator>MsBuild:Compile</Generator>
     </TypedJSON>
+  </ItemGroup>
+  <ItemGroup>
+    <TypedJSON Include="Server\ContactPage.json">
+      <Generator>MsBuild:Compile</Generator>
+    </TypedJSON>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Database\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(StarcounterBin)\Starcounter.MsBuild.targets" />
