Add master.html to make http://127.0.0.1:8080/skyper/skype-user/albert work

--- a/Apps/Skype/Skype.csproj
+++ b/Apps/Skype/Skype.csproj
@@ -95,6 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Client\skyper-user.html" />
+    <Content Include="Client\master.html" />
   </ItemGroup>
   <ItemGroup>
     <TypedJSON Include="Server\Page.json">
