--- a/Apps/Skype/Skype.csproj
+++ b/Apps/Skype/Skype.csproj
@@ -82,7 +82,6 @@
     <Compile Include="Server\Master.json.cs">
       <DependentUpon>Master.json</DependentUpon>
     </Compile>
-    <Compile Include="Database\Demodata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\Page.json.cs">
       <DependentUpon>Page.json</DependentUpon>
@@ -95,7 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Client\skyper-user.html" />
-    <Content Include="Client\master.html" />
+    <Content Include="Client\skyper.html" />
   </ItemGroup>
   <ItemGroup>
     <TypedJSON Include="Server\Page.json">
