Puppetize Launcher workspace, and add search example (Map app responds to "warszawa" query)

--- a/Server/Launcher.json
+++ b/Server/Launcher.json
@@ -2,7 +2,7 @@
    homeThumbnail: {},
    homeUrl: "",
    searchBar: {
-     query: "",
+     query$: "",
 	 feedback: [{
 	   text: "",
 	   matchScore: 0.5,
