Let's try to add search handler for dummyCRM

--- a/Apps/dummyCRM/dummyCRM.csproj
+++ b/Apps/dummyCRM/dummyCRM.csproj
@@ -96,6 +96,7 @@
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Server\ContactPage.json.cs">
