--- a/Server/Launcher.json
+++ b/Server/Launcher.json
@@ -27,5 +27,13 @@
 	  on: true,
 	  text: "",
 	  thumbnail: {}
-	}
+	},
+	uri: "",
+	focusedWorkspace: 1,
+	workspaces: [
+	  {
+	    appName: "",
+		master: {}
+	  }
+	]
 }
