--- a/Apps/dummyCRM/dummyCRM.csproj
+++ b/Apps/dummyCRM/dummyCRM.csproj
@@ -99,6 +99,7 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database\db.cs" />
     <Compile Include="Server\ContactPage.json.cs">
       <DependentUpon>ContactPage.json</DependentUpon>
     </Compile>
@@ -112,6 +113,12 @@
     <Compile Include="Server\Page.json.cs">
       <DependentUpon>Page.json</DependentUpon>
     </Compile>
+    <Compile Include="Server\SearchCompaniesPage.json.cs">
+      <DependentUpon>SearchCompaniesPage.json</DependentUpon>
+    </Compile>
+    <Compile Include="Server\SearchContactsPage.json.cs">
+      <DependentUpon>SearchContactsPage.json</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <TypedJSON Include="Server\Master.json">
@@ -121,6 +128,10 @@
   <ItemGroup>
     <Content Include="Client\company.html" />
     <Content Include="Client\contact.html" />
+    <Content Include="Client\dummyCRM.html" />
+    <Content Include="Client\search-companies.html" />
+    <Content Include="Client\search-contacts.html" />
+    <Content Include="Client\css\dummyCRM.css" />
     <Content Include="Client\vendor\x-html\x-html.html" />
     <Content Include="Client\vendor\fast-json-patch\src\json-patch-duplex.js" />
     <Content Include="Client\vendor\platform\platform.js" />
@@ -142,7 +153,14 @@
     </TypedJSON>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Database\" />
+    <TypedJSON Include="Server\SearchCompaniesPage.json">
+      <Generator>MsBuild:Compile</Generator>
+    </TypedJSON>
+  </ItemGroup>
+  <ItemGroup>
+    <TypedJSON Include="Server\SearchContactsPage.json">
+      <Generator>MsBuild:Compile</Generator>
+    </TypedJSON>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(StarcounterBin)\Starcounter.MsBuild.targets" />
