add functional menu

--- a/Apps/dummyCRM/dummyCRM.csproj
+++ b/Apps/dummyCRM/dummyCRM.csproj
@@ -129,6 +129,7 @@
     <Content Include="Client\company.html" />
     <Content Include="Client\contact.html" />
     <Content Include="Client\dummyCRM.html" />
+    <Content Include="Client\menu.html" />
     <Content Include="Client\search-companies.html" />
     <Content Include="Client\search-contacts.html" />
     <Content Include="Client\css\dummyCRM.css" />
