fix Skyper button error in Shadow DOM (use warpech fork until Tomek merges fix with skype-button origin repo)

--- a/Apps/Skyper/bower.json
+++ b/Apps/Skyper/bower.json
@@ -13,6 +13,6 @@
     "tests"
   ],
   "dependencies": {
-    "skype-button": "~0.0.1"
+    "skype-button": "warpech/skype-button#fixLifecycleCallback"
   }
 }
