bower update (skype-button 0.0.2)

--- a/Apps/Skyper/bower.json
+++ b/Apps/Skyper/bower.json
@@ -13,6 +13,6 @@
     "tests"
   ],
   "dependencies": {
-    "skype-button": "warpech/skype-button#fixLifecycleCallback"
+    "skype-button": "~0.0.2"
   }
 }
