update to PuppetJs#0.1.8 (bower); use model-operations#0.0.1

--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "fast-json-patch": "~0.3.6",
     "tomalec-sortable-list": "~0.0.20140226",
     "imported-template": "~0.0.1",
+    "model-operations": "polyjuice/model-operations#~0.0.1",
     "PuppetJs": "~0.1.6",
     "polymer-ui-field": "Polymer/polymer-ui-field#~0.2.1",
     "polymer-ui-dropdown": "Polymer/polymer-ui-dropdown#~0.2.1",
