--- a/Apps/SuperCRM/SuperCRM.csproj
+++ b/Apps/SuperCRM/SuperCRM.csproj
@@ -122,6 +122,16 @@
     <Content Include="Client\company.html" />
     <Content Include="Client\components\puppet-morphUrl.html" />
     <Content Include="Client\contact.html" />
+    <Content Include="Client\css\animation.css" />
+    <Content Include="Client\css\button.css" />
+    <Content Include="Client\css\fontello-codes.css" />
+    <Content Include="Client\css\fontello-embedded.css" />
+    <Content Include="Client\css\fontello-ie7-codes.css" />
+    <Content Include="Client\css\fontello-ie7.css" />
+    <Content Include="Client\css\fontello.css" />
+    <Content Include="Client\css\labeledInput.css" />
+    <Content Include="Client\css\select.css" />
+    <Content Include="Client\font\fontello.svg" />
     <Content Include="Client\SuperCRM.html" />
     <Content Include="Client\menu.html" />
     <Content Include="Client\search.html" />
@@ -150,6 +160,11 @@
     <TypedJSON Include="Server\SearchPage.json">
       <Generator>MsBuild:Compile</Generator>
     </TypedJSON>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Client\font\fontello.eot" />
+    <None Include="Client\font\fontello.ttf" />
+    <None Include="Client\font\fontello.woff" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(StarcounterBin)\Starcounter.MsBuild.targets" />
