--- a/Launcher.csproj
+++ b/Launcher.csproj
@@ -93,6 +93,7 @@
     </TypedJSON>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Client\css\menu.css" />
     <Content Include="Client\css\style.css" />
     <Content Include="Client\elements\dashboard\pj-dashboard.html" />
     <Content Include="Client\vendor\tomalec-sortable-list\elements\tomalec-sortable-body.html" />
