--- a/Apps/Map/Map.csproj
+++ b/Apps/Map/Map.csproj
@@ -97,6 +97,7 @@
     </TypedJSON>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Client\css\map.css" />
     <Content Include="Client\dashboard.html" />
     <Content Include="Client\mapPage.html" />
     <Content Include="Client\vendor\platform\platform.js" />
