--- a/Apps/SuperCRM/SuperCRM.csproj
+++ b/Apps/SuperCRM/SuperCRM.csproj
@@ -123,12 +123,12 @@
     <Content Include="Client\components\puppet-morphUrl.html" />
     <Content Include="Client\contact.html" />
     <Content Include="Client\css\animation.css" />
-    <Content Include="Client\css\fontello-codes.css" />
-    <Content Include="Client\css\fontello-embedded.css" />
-    <Content Include="Client\css\fontello-ie7-codes.css" />
-    <Content Include="Client\css\fontello-ie7.css" />
-    <Content Include="Client\css\fontello.css" />
-    <Content Include="Client\font\fontello.svg" />
+    <Content Include="Client\css\supercrmfont-codes.css" />
+    <Content Include="Client\css\supercrmfont-embedded.css" />
+    <Content Include="Client\css\supercrmfont-ie7-codes.css" />
+    <Content Include="Client\css\supercrmfont-ie7.css" />
+    <Content Include="Client\css\supercrmfont.css" />
+    <Content Include="Client\font\supercrmfont.svg" />
     <Content Include="Client\SuperCRM.html" />
     <Content Include="Client\menu.html" />
     <Content Include="Client\search.html" />
@@ -159,9 +159,9 @@
     </TypedJSON>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Client\font\fontello.eot" />
-    <None Include="Client\font\fontello.ttf" />
-    <None Include="Client\font\fontello.woff" />
+    <None Include="Client\font\supercrmfont.eot" />
+    <None Include="Client\font\supercrmfont.ttf" />
+    <None Include="Client\font\supercrmfont.woff" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(StarcounterBin)\Starcounter.MsBuild.targets" />
