replace gravatar-image with gravatar-img; now the Gravatar image fills the whole space (pan & scan cropping) - closes #31

--- a/Apps/SuperCRM/bower.json
+++ b/Apps/SuperCRM/bower.json
@@ -14,6 +14,6 @@
     "tests"
   ],
   "dependencies": {
-    "gravatar-image": "gh-pages"
+    "gravatar-img": "warpech/gravatar-img#~0.1.2"
   }
 }
