Update dependencies (bower):
Polymer 0.3.1
Polymer-ui-* 0.3.0
Juicy/juicy-tile-list@1f9f13437c (juicy-tiles)
Juicy/juicy-tiles-editor@fb0ad961b9
Juicy/juicy-popover@a3d94375ca

Removed tomalec-sortable-list

--- a/bower.json
+++ b/bower.json
@@ -13,20 +13,20 @@
     "tests"
   ],
   "dependencies": {
-    "platform": "Polymer/platform#~0.2.1",
-    "polymer": "Polymer/polymer#~0.2.1",
+    "platform": "Polymer/platform#~0.3.1",
+    "polymer": "Polymer/polymer#~0.3.1",
     "fast-json-patch": "~0.3.6",
-    "tomalec-sortable-list": "~0.0.20140226",
     "imported-template": "~0.0.1",
     "model-operations": "polyjuice/model-operations#~0.0.1",
     "PuppetJs": "~0.1.6",
-    "polymer-ui-field": "Polymer/polymer-ui-field#~0.2.1",
-    "polymer-ui-dropdown": "Polymer/polymer-ui-dropdown#~0.2.1",
-    "polymer-ui-toolbar": "Polymer/polymer-ui-toolbar#~0.2.1",
-    "polymer-ui-menu-button": "Polymer/polymer-ui-menu-button#~0.2.1",
-    "polymer-ui-menu-item": "Polymer/polymer-ui-menu-item#~0.2.1",
-    "polymer-ui-sidebar": "Polymer/polymer-ui-sidebar#~0.2.1",
-    "polymer-ui-toggle-button": "Polymer/polymer-ui-toggle-button#~0.2.1",
+    "polymer-ui-field": "Polymer/polymer-ui-field",
+    "polymer-ui-dropdown": "Polymer/polymer-ui-dropdown",
+    "polymer-ui-toolbar": "Polymer/polymer-ui-toolbar",
+    "polymer-ui-menu-button": "Polymer/polymer-ui-menu-button",
+    "polymer-ui-menu-item": "Polymer/polymer-ui-menu-item",
+    "polymer-ui-sidebar": "Polymer/polymer-ui-sidebar",
+    "polymer-ui-toggle-button": "Polymer/polymer-ui-toggle-button",
+    "juicy-tile-list": "Juicy/juicy-tile-list#gh-pages",
     "juicy-tiles-editor": "Juicy/juicy-tiles-editor#gh-pages",
     "warpech-display-router": "warpech/warpech-display-router#0.1.0",
     "css-element-queries": "marcj/css-element-queries#master"
