--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,7 @@
     "polymer-ui-sidebar": "Polymer/polymer-ui-sidebar",
     "polymer-ui-toggle-button": "Polymer/polymer-ui-toggle-button",
     "juicy-tile-list": "Juicy/juicy-tile-list#gh-pages",
-    "juicy-tiles-editor": "Juicy/juicy-tiles-editor#gh-pages",
+    "juicy-tile-editor": "Juicy/juicy-tile-editor#gh-pages",
     "warpech-display-router": "warpech/warpech-display-router#0.1.0",
     "css-element-queries": "marcj/css-element-queries#master"
   }
