Update dependencies (bower):
Juicy/juicy-tile-grid@2b3fd11630
Juicy/juicy-tile-list@b6e1b7812b
Juicy/juicy-tile-editor@3668b84d2b
PuppetJs/PuppetJs@0.1.11
Juicy/imported-template@2b30fc49c7
web-animations/web-animations-js@4bcf8f706b

--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
     "platform": "Polymer/platform#~0.3.1",
     "polymer": "Polymer/polymer#~0.3.1",
     "fast-json-patch": "~0.3.6",
-    "imported-template": "~0.0.1",
+    "imported-template": "gh-pages",
     "model-operations": "polyjuice/model-operations#~0.0.1",
     "PuppetJs": "~0.1.6",
     "polymer-ui-field": "Polymer/polymer-ui-field",
@@ -26,7 +26,8 @@
     "polymer-ui-menu-item": "Polymer/polymer-ui-menu-item",
     "polymer-ui-sidebar": "Polymer/polymer-ui-sidebar",
     "polymer-ui-toggle-button": "Polymer/polymer-ui-toggle-button",
-    "juicy-tile-list": "Juicy/juicy-tile-list#gh-pages",
+    "juicy-tile-list": "gh-pages",
+    "juicy-tile-grid": "gh-pages",
     "juicy-tile-editor": "Juicy/juicy-tile-editor#gh-pages",
     "juicy-redirect": "Juicy/juicy-redirect#~0.1.0",
     "warpech-display-router": "warpech/warpech-display-router#0.1.0",
