Use image-mask for company logo - #54

--- a/Apps/SuperCRM/bower.json
+++ b/Apps/SuperCRM/bower.json
@@ -14,6 +14,7 @@
     "tests"
   ],
   "dependencies": {
-    "gravatar-img": "warpech/gravatar-img#~0.1.2"
+    "gravatar-img": "warpech/gravatar-img#~0.1.2",
+    "image-mask": "~0.0.4"
   }
 }
