--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "juicy-tile-editor": "Juicy/juicy-tile-editor#gh-pages",
     "juicy-redirect": "Juicy/juicy-redirect#~0.1.0",
     "warpech-display-router": "warpech/warpech-display-router#0.1.0",
-    "css-element-queries": "marcj/css-element-queries#master"
+    "css-element-queries": "marcj/css-element-queries#master",
+    "core-localstorage": "Polymer/core-localstorage#0.3.4"
   }
 }
