--- a/bower.json
+++ b/bower.json
@@ -15,10 +15,8 @@
   "dependencies": {
     "platform": "Polymer/platform#~0.4.0",
     "polymer": "Polymer/polymer#~0.4.0",
-    "fast-json-patch": "~0.3.10",
     "imported-template": "gh-pages",
     "model-operations": "polyjuice/model-operations#~0.0.1",
-    "PuppetJs": "~0.2.0",
     "polymer-ui-field": "Polymer/polymer-ui-field",
     "polymer-ui-dropdown": "Polymer/polymer-ui-dropdown",
     "polymer-ui-toolbar": "Polymer/polymer-ui-toolbar",
@@ -32,6 +30,7 @@
     "juicy-redirect": "Juicy/juicy-redirect#~0.1.0",
     "warpech-display-router": "warpech/warpech-display-router#0.1.0",
     "css-element-queries": "marcj/css-element-queries#master",
-    "core-localstorage": "Polymer/core-localstorage#0.3.4"
+    "core-localstorage": "Polymer/core-localstorage#0.3.4",
+    "puppet-js": "~0.0.3"
   }
 }
