--- a/Launcher.csproj
+++ b/Launcher.csproj
@@ -100,6 +100,7 @@
     <Content Include="Client\css\launcher-menu.css" />
     <Content Include="Client\css\style.css" />
     <Content Include="Client\elements\dashboard\pj-dashboard.html" />
+    <Content Include="Client\LauncherMenu.html" />
     <Content Include="Client\LauncherTemplate.html" />
   </ItemGroup>
   <ItemGroup>
