Update and install new bower dependencies (fixes #92):
 * PuppetJs/puppet@0.2.4
 * Juicy/juicy-redirect@0.1.2
 + PuppetJs/puppet-redirect@0.1.2

--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "puppet-js": "~0.0.3",
     "core-icon-button": "Polymer/core-icon-button#~0.4.0",
     "core-field": "Polymer/core-field#~0.4.0",
-    "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages"
+    "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
+    "puppet-redirect": "PuppetJs/puppet-redirect#~0.1.2"
   }
 }
