--- a/Launcher.csproj
+++ b/Launcher.csproj
@@ -43,32 +43,32 @@
   <ItemGroup>
     <Reference Include="Starcounter, Version=2.0.0.0, Culture=neutral, PublicKeyToken=d2df1e81d0ca3abf, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\sc\Level1\bin\Debug\Starcounter.dll</HintPath>
+      <HintPath>$(StarcounterBin)\Starcounter.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Starcounter.Bootstrap, Version=2.0.0.0, Culture=neutral, PublicKeyToken=d2df1e81d0ca3abf, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\sc\Level1\bin\Debug\Starcounter.Bootstrap.dll</HintPath>
+      <HintPath>$(StarcounterBin)\Starcounter.Bootstrap.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Starcounter.Hypermedia, Version=2.0.0.0, Culture=neutral, PublicKeyToken=d2df1e81d0ca3abf, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\sc\Level1\bin\Debug\Starcounter.Hypermedia.dll</HintPath>
+      <HintPath>$(StarcounterBin)\Starcounter.Hypermedia.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Starcounter.Internal, Version=2.0.0.0, Culture=neutral, PublicKeyToken=d2df1e81d0ca3abf, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\sc\level1\bin\Debug\Starcounter.Internal.dll</HintPath>
+      <HintPath>$(StarcounterBin)\Starcounter.Internal.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Starcounter.Node, Version=2.0.0.0, Culture=neutral, PublicKeyToken=d2df1e81d0ca3abf, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\sc\level1\bin\Debug\Starcounter.Node.dll</HintPath>
+      <HintPath>$(StarcounterBin)\Starcounter.Node.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Starcounter.XSON, Version=2.0.0.0, Culture=neutral, PublicKeyToken=d2df1e81d0ca3abf, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\sc\Level1\bin\Debug\Starcounter.XSON.dll</HintPath>
+      <HintPath>$(StarcounterBin)\Starcounter.XSON.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
