switch to search result page from any page; update URL while typing in the search field

--- a/Server/Launcher.json
+++ b/Server/Launcher.json
@@ -4,6 +4,7 @@
 	editingMode$: false,
 	searchBar: {
 		query$: "",
+		searchEngineResultPageUrl$: "",
 		feedback: [{
 		text: "",
 		matchScore: 0.5,
