--- a/Launcher.csproj
+++ b/Launcher.csproj
@@ -41,6 +41,10 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Polyjuice, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Polyjuice\src\bin\Debug\Polyjuice.dll</HintPath>
+    </Reference>
     <Reference Include="Starcounter, Version=2.0.0.0, Culture=neutral, PublicKeyToken=d2df1e81d0ca3abf, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>$(StarcounterBin)\Starcounter.dll</HintPath>
@@ -79,17 +83,8 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Database\JuicyTilesSetup.cs" />
-    <Compile Include="Server\JuicyTilesSetupHandlers.cs" />
-    <Compile Include="Server\Launcher.json.cs">
-      <DependentUpon>Launcher.json</DependentUpon>
-    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <TypedJSON Include="Server\Launcher.json">
-      <Generator>MsBuild:Compile</Generator>
-    </TypedJSON>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Client\css\launcher-button.css" />
