--- a/package/package.config
+++ b/package/package.config
@@ -2,13 +2,14 @@
 <PackageConfig xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <Namespace>Polyjuice.Launcher</Namespace>
   <Channel>Stable</Channel>  
-  <Version>1.1</Version>
+  <Version>1.0</Version>
   <AppName>Launcher</AppName>
   <Executable>app/Launcher.exe</Executable>
   <ResourceFolder>Content</ResourceFolder>
   <ImageUri>Launcher.png</ImageUri>
-  <DisplayName>Launcher</DisplayName>
   <Company>Polyjuice</Company>
+  <DisplayName>Launcher</DisplayName>
+  <Heading>Launcher</Heading>
   <Description>Launcher Application</Description>
-  <VersionDate>2014-12-11T11:21:00Z</VersionDate>
+  <VersionDate>2015-01-26T13:00:00Z</VersionDate>
 </PackageConfig>
