--- a/Launcher.csproj
+++ b/Launcher.csproj
@@ -44,6 +44,7 @@
     <Reference Include="Polyjuice, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>$(StarcounterBin)\EditionLibraries\Polyjuice.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Starcounter, Version=2.0.0.0, Culture=neutral, PublicKeyToken=d2df1e81d0ca3abf, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
