--- a/Client/sys/juicy-tile-grid/bower.json
+++ b/Client/sys/juicy-tile-grid/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "juicy-tile-grid",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "<juicy-tile-grid> is a Polymer Element with CSS Grid Layout renderer for [`juicy-tile-list`](Juicy/juicy-tile-list).",
   "license": "MIT",
   "main": "src/juicy-tile-grid.html",
@@ -20,8 +20,8 @@
     "preview.png"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#~0.3.4",
-    "juicy-tile-list": "~0.0.4"
+    "polymer": "<0.8.0",
+    "juicy-tile-list": "~0.0.9"
   },
   "devDependencies": {
     "juicy-jsoneditor": "#gh-pages"
