Update warpech/warpech-display-router@0.1.1 - fixes #6

--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "juicy-tile-grid": "gh-pages",
     "juicy-tile-editor": "Juicy/juicy-tile-editor#gh-pages",
     "juicy-redirect": "Juicy/juicy-redirect#~0.1.0",
-    "warpech-display-router": "warpech/warpech-display-router#0.1.0",
+    "warpech-display-router": "warpech/warpech-display-router#~0.1.1",
     "css-element-queries": "marcj/css-element-queries#master",
     "core-icon-button": "Polymer/core-icon-button#~0.5.0",
     "core-field": "Polymer/core-field#~0.5.0",
