--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
+    "cheerio": "^0.18.0",
     "grunt": "~0.4.1",
     "grunt-contrib-connect": "0.3.0",
-    "grunt-contrib-watch": "~0.4.0"
+    "grunt-contrib-watch": "~0.4.0",
+    "supertest": "^0.15.0"
   }
 }
