--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "grunt": "~0.4.1",
     "grunt-contrib-connect": "0.3.0",
     "grunt-contrib-watch": "~0.4.0",
+    "mocha": "^2.2.1",
     "supertest": "^0.15.0"
-  }
+  },
+  "scripts": {
+    "test": "mocha"
+   }
 }
