--- a/package/package.config
+++ b/package/package.config
@@ -2,7 +2,7 @@
 <PackageConfig xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <Namespace>Polyjuice.Launcher</Namespace>
   <Channel>Stable</Channel>  
-  <Version>1.0</Version>
+  <Version>2.0.0-pre1</Version>
   <AppName>Launcher</AppName>
   <Executable>app/Launcher.exe</Executable>
   <ResourceFolder>Content</ResourceFolder>
@@ -10,6 +10,6 @@
   <Company>Polyjuice</Company>
   <DisplayName>Launcher</DisplayName>
   <Heading>Launcher</Heading>
-  <Description>Launcher Application</Description>
-  <VersionDate>2015-02-27T11:20:00Z</VersionDate>
+  <Description>Launcher Application (tested with Starcounter 2.0.3077)</Description>
+  <VersionDate>2014-03-10T16:00:00Z</VersionDate>
 </PackageConfig>
