--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "launcher",
   "version": "0.0.0",
+  "private": true,
   "dependencies": {},
   "devDependencies": {
     "cheerio": "^0.18.0",
