--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,8 @@
     "polymer": "Polymer/polymer#~0.5.0",
     "core-toolbar": "Polymer/core-toolbar#~0.5.0",
     "paper-toggle-button": "Polymer/paper-toggle-button",
-    "juicy-tile-list": "gh-pages",
-    "juicy-tile-grid": "gh-pages",
+    "juicy-tile-list": "#issues/22-tiles-in-ShadowDOM",
+    "juicy-tile-grid": "#tiles-in-ShadowDOM",
     "juicy-tile-editor": "Juicy/juicy-tile-editor#gh-pages",
     "juicy-redirect": "Juicy/juicy-redirect#~0.1.0",
     "warpech-display-router": "warpech/warpech-display-router#~0.1.1",
