Update   Juicy/juicy-tile-list@scoping, Juicy/juicy-tile-grid@tilesProperty, Juicy/juicy-tile-editor#tilesProperty

--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,9 @@
     "polymer": "Polymer/polymer#~0.5.0",
     "core-toolbar": "Polymer/core-toolbar#~0.5.0",
     "paper-toggle-button": "Polymer/paper-toggle-button",
-    "juicy-tile-list": "#issues/22-tiles-in-ShadowDOM",
-    "juicy-tile-grid": "#tiles-in-ShadowDOM",
-    "juicy-tile-editor": "Juicy/juicy-tile-editor#gh-pages",
+    "juicy-tile-list": "#scoping",
+    "juicy-tile-grid": "#tilesProperty",
+    "juicy-tile-editor": "Juicy/juicy-tile-editor#tilesProperty",
     "juicy-redirect": "Juicy/juicy-redirect#~0.1.0",
     "warpech-display-router": "warpech/warpech-display-router#~0.1.1",
     "core-icon-button": "Polymer/core-icon-button#~0.5.0",
