--- a/src/Launcher/bower.json
+++ b/src/Launcher/bower.json
@@ -13,13 +13,13 @@
     "tests"
   ],
   "dependencies": {
-    "webcomponentsjs": "webcomponents/webcomponentsjs#~0.5.0",
-    "polymer": "Polymer/polymer#~0.5.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#~0.5.5",
+    "polymer": "Polymer/polymer#~0.5.5",
     "core-toolbar": "Polymer/core-toolbar#~0.5.0",
     "paper-toggle-button": "Polymer/paper-toggle-button",
-    "juicy-tile-list": "#scoping",
-    "juicy-tile-grid": "#tilesProperty",
-    "juicy-tile-editor": "Juicy/juicy-tile-editor#tilesProperty",
+    "juicy-tile-list": ">=0.1.0",
+    "juicy-tile-grid": ">=0.1.0",
+    "juicy-tile-editor": "Juicy/juicy-tile-editor#gh-pages",
     "juicy-redirect": "Juicy/juicy-redirect#~0.1.0",
     "warpech-display-router": "warpech/warpech-display-router#~0.1.1",
     "core-icon-button": "Polymer/core-icon-button#~0.5.0",
