--- a/src/Launcher/wwwroot/sys/juicy-tile-grid/package.json
+++ b/src/Launcher/wwwroot/sys/juicy-tile-grid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "juicy-tile-grid",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "<juicy-tile-grid> is a Polymer Element with CSS Grid Layout renderer for [`juicy-tile-list`](Juicy/juicy-tile-list).",
   "main": "src/juicy-tile-grid.html",
   "directories": {
@@ -10,11 +10,11 @@
   "dependencies": {},
   "devDependencies": {
     "chai": "~1.9.1",
-    "grunt": "~0.4.4",
-    "grunt-mocha": "~0.4.10",
-    "mocha": "~1.18.2",
+    "grunt": "^0.4.5",
+    "grunt-bump": "^0.3.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-text-replace": "~0.3.11"
+    "grunt-mocha": "~0.4.10",
+    "mocha": "~1.18.2"
   },
   "scripts": {
     "test": "mocha"
