--- a/src/Launcher/wwwroot/sys/juicy-tile-list/package.json
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/package.json
@@ -1,6 +1,6 @@
 {
   "name": "juicy-tile-list",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "<juicy-tile-list> is a Polymer Element with sortable tiles that packs efficiently without changing HTML structure (changes CSS only).",
   "main": "src/juicy-tile-list.html",
   "directories": {
@@ -11,12 +11,13 @@
   "devDependencies": {
     "chai": "~1.9.1",
     "grunt": "~0.4.5",
-    "grunt-mocha": "~0.4.10",
-    "mocha": "~1.18.2",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-text-replace": "~0.3.11",
+    "grunt-bump": "^0.3.0",
+    "grunt-contrib-htmlmin": "~0.3.0",
     "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-htmlmin": "~0.3.0"
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-mocha": "~0.4.10",
+    "grunt-text-replace": "~0.3.11",
+    "mocha": "~1.18.2"
   },
   "scripts": {
     "test": "mocha"
