--- a/src/Launcher/Launcher.csproj
+++ b/src/Launcher/Launcher.csproj
@@ -106,6 +106,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="wwwroot\Launcher\css\style.css" />
+    <Content Include="wwwroot\Launcher\elements\launcher-hot-key\launcher-hot-key.html" />
     <Content Include="wwwroot\Launcher\elements\launcher-launchpad\launcher-launchpad.html" />
     <Content Include="wwwroot\Launcher\elements\launcher-layout\launcher-main.html" />
     <Content Include="wwwroot\Launcher\elements\launcher-partial\launcher-partial.html" />
