--- a/src/Launcher/Launcher.csproj
+++ b/src/Launcher/Launcher.csproj
@@ -100,9 +100,18 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="api\JuicyTilesSetup.cs" />
+    <Compile Include="api\JuicyTilesSetupHandlers.cs" />
+    <Compile Include="api\LauncherHelper.cs" />
     <Compile Include="api\MainHandlers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="viewmodels\Launcher.json.cs">
+      <DependentUpon>Launcher.json</DependentUpon>
+    </Compile>
+    <Compile Include="viewmodels\LauncherPage.json.cs">
+      <DependentUpon>LauncherPage.json</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="wwwroot\Launcher\css\style.css" />
@@ -114,7 +123,6 @@
     <Content Include="wwwroot\Launcher\LauncherTemplate.html" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="viewmodels\" />
     <Folder Include="wwwroot\Launcher\viewmodels\" />
   </ItemGroup>
   <ItemGroup>
@@ -133,6 +141,16 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <TypedJSON Include="viewmodels\Launcher.json">
+      <Generator>MsBuild:Compile</Generator>
+    </TypedJSON>
+  </ItemGroup>
+  <ItemGroup>
+    <TypedJSON Include="viewmodels\LauncherPage.json">
+      <Generator>MsBuild:Compile</Generator>
+    </TypedJSON>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(StarcounterBin)\Starcounter.MsBuild.targets" />
