--- a/src/Launcher/viewmodels/LauncherPage.json
+++ b/src/Launcher/viewmodels/LauncherPage.json
@@ -1,7 +1,7 @@
 {
-    "Html": "/Launcher/page",
+    "Html": null,
 	"appName": "",
 	"_juicyTilesSetup": null,
-	"_PartialId": "",
+	"_partialId": "",
 	"_editorOpened": false
 }
