Juicy/juicy-display-router@09f05ea
Juicy/juicy-display-router@09f05ea8125db2eb1d37591537f9eeb575438ff4
https://github.com/warpech/warpech-display-router/issues/2

--- a/src/Launcher/bower.json
+++ b/src/Launcher/bower.json
@@ -21,7 +21,7 @@
     "juicy-tile-grid": ">=0.1.0",
     "juicy-tile-editor": "Juicy/juicy-tile-editor#gh-pages",
     "juicy-redirect": "Juicy/juicy-redirect#~0.1.0",
-    "warpech-display-router": "warpech/warpech-display-router#~0.1.1",
+    "juicy-display-router": "Juicy/juicy-display-router#~1.0.0",
     "core-icon-button": "Polymer/core-icon-button#~0.5.0",
     "core-field": "Polymer/core-field#~0.5.0",
     "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
