--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/bower.json
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "juicy-tile-editor",
-  "version": "0.0.0",
+  "version": "0.0.4",
   "homepage": "https://github.com/Juicy/juicy-tile-editor",
   "description": "<juicy-tile-editor> is an editor form for <juicy-tile-list>",
   "license": "MIT",
@@ -19,11 +19,13 @@
     "core-selector": "Polymer/core-selector",
     "juicy-highlight": "Juicy/juicy-highlight#gh-pages",
     "juicy-popover": "Juicy/juicy-popover#gh-pages",
+    "juicy-color-picker": "Juicy/juicy-color-picker#gh-pages",
     "core-icon": "Polymer/core-icon#~0.5.2",
     "core-icon-button": "Polymer/core-icon-button#~0.5.2"
   },
   "devDependencies": {
     "core-localstorage": "Polymer/core-localstorage#0.4.1",
-    "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#master"
+    "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
+    "juicy-tile-grid": "Juicy/juicy-tile-grid#gh-pages"
   }
 }
