--- a/src/Launcher/bower.json
+++ b/src/Launcher/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "LauncherClient",
-  "version": "0.0.20140210",
+  "version": "2.0.0-pre12",
   "homepage": "https://github.com/Polyjuice/Launcher",
   "private": true,
   "ignore": [
