--- a/src/Launcher/bower.json
+++ b/src/Launcher/bower.json
@@ -25,6 +25,7 @@
     "core-icon-button": "Polymer/core-icon-button#~0.5.0",
     "core-field": "Polymer/core-field#~0.5.0",
     "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
-    "console-log": "console-log#~1.0.0"
+    "console-log": "console-log#~1.0.0",
+    "polyjuice-include": "Polyjuice/launcher-include#~0.0.2"
   }
 }
