Juicy/juicy-tile-editor@6b7b379
Juicy/juicy-tile-editor@6b7b37986137cc83b3085ed6ec12af9d1784fb77
https://github.com/Polyjuice/Launcher/issues/133

--- a/src/Launcher/viewmodels/Launcher.json
+++ b/src/Launcher/viewmodels/Launcher.json
@@ -3,6 +3,7 @@
     "homeThumbnail": { },
     "homeUrl": "",
     "editingMode$": false,
+    "layoutModified$": false,
     "searchBar": {
         "query$": "",
         "searchEngineResultPageUrl$": "",
