Add search preview, fix search behaviour
https://github.com/Polyjuice/Launcher/issues/136

--- a/src/Launcher/Launcher.csproj
+++ b/src/Launcher/Launcher.csproj
@@ -114,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="wwwroot\Launcher\css\style.css" />
+    <Content Include="wwwroot\Launcher\elements\laucnher-search-input\launcher-search-input.html" />
     <Content Include="wwwroot\Launcher\elements\launcher-hot-key\launcher-hot-key.html" />
     <Content Include="wwwroot\Launcher\elements\launcher-launchpad\launcher-launchpad.html" />
     <Content Include="wwwroot\Launcher\elements\launcher-layout\launcher-main.html" />
