--- a/src/Launcher/viewmodels/Launcher.json
+++ b/src/Launcher/viewmodels/Launcher.json
@@ -6,6 +6,7 @@
     "layoutModified$": false,
     "searchBar": {
         "query$": "",
+        "submit$": "",
         "searchEngineResultPageUrl$": "",
         "feedback": [
             {
@@ -14,7 +15,10 @@
                 "url": "",
                 "thumbnail": { }
             }
-        ]
+        ],
+        "preview": { },
+        "previewVisible": false,
+        "close$": 0
     },
     "results": { },
     "user": { },
