--- a/src/Launcher/viewmodels/LauncherPage.json
+++ b/src/Launcher/viewmodels/LauncherPage.json
@@ -1,7 +1,7 @@
 {
-    "Html": null,
+    "Html": "",
 	"appName": "",
-	"_juicyTilesSetup": null,
+	"_juicyTilesSetup": "",
 	"_partialId": "",
 	"_editorOpened": false
 }
