--- a/src/Launcher/bower.json
+++ b/src/Launcher/bower.json
@@ -18,14 +18,14 @@
     "core-toolbar": "Polymer/core-toolbar#~0.5.0",
     "paper-toggle-button": "Polymer/paper-toggle-button",
     "juicy-tile-list": ">=0.1.0",
-    "juicy-tile-grid": ">=0.1.0",
-    "juicy-tile-editor": "Juicy/juicy-tile-editor#gh-pages",
+    "juicy-tile-grid": "#fractions",
+    "juicy-tile-editor": "Juicy/juicy-tile-editor#fractions",
     "juicy-redirect": "Juicy/juicy-redirect#~0.1.0",
     "juicy-display-router": "Juicy/juicy-display-router#~1.0.0",
     "core-icon-button": "Polymer/core-icon-button#~0.5.0",
     "core-field": "Polymer/core-field#~0.5.0",
     "juicy-tiles-setup-sync": "Juicy/juicy-tiles-setup-sync#gh-pages",
     "console-log": "console-log#~1.0.0",
-    "polyjuice-include": "Polyjuice/launcher-include#gh-pages"
+    "polyjuice-include": "Polyjuice/launcher-include#fractions"
   }
 }
