--- a/src/Launcher/wwwroot/sys/juicy-tile-grid/bower.json
+++ b/src/Launcher/wwwroot/sys/juicy-tile-grid/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "juicy-tile-grid",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "<juicy-tile-grid> is a Polymer Element with CSS Grid Layout renderer for [`juicy-tile-list`](Juicy/juicy-tile-list).",
   "license": "MIT",
   "main": "src/juicy-tile-grid.html",
@@ -21,7 +21,7 @@
   ],
   "dependencies": {
     "polymer": "<0.8.0",
-    "juicy-tile-list": ">=0.1.0"
+    "juicy-tile-list": "#gh-pages"
   },
   "devDependencies": {
     "juicy-jsoneditor": "#gh-pages"
