Use JuicyTilesSetup directly from launchpad
 remove workaround for Starcounter/Starcounter#2571
 fixes Polyjuice/Launcher#126

--- a/src/Launcher/ViewModels/LauncherPage.json
+++ b/src/Launcher/ViewModels/LauncherPage.json
@@ -31,7 +31,8 @@
     "menu": { },
     "launchpad": {
         "icons": { },
-        "names": { }
+        "names": { },
+		"juicyTilesSetup": {}
     },
     "dashboard": { },
     "appFilter": [
